...

  @override
  Widget build(BuildContext context) {
    return Scaffold(
      key: const Key('dashboardPage'),
      appBar: AppBar(
        title: const Text('Dashboard'),
        actions: [
          IconButton(
              key: const ValueKey('logout'),
              icon: const Icon(Icons.logout),
              onPressed: () async {
                _clearSharedPreferences();
                Navigator.pushReplacementNamed(context, '/loginScreen');
              })
        ],
...
