...
                    ),
                  ),
                  SizedBox(
                    width: 250,
                    height: 50,
                    child: ElevatedButton(
                      key: const ValueKey('btnLogin'),
                      onPressed: () {
                        if (_formKey.currentState!.validate()) {}
                        _loginUser();
                      },
                      child: const Text('Login'),
                    ),
...
                    height: 15,
                  ),
                  SizedBox(
                    width: 250,
                    height: 50,
                    child: ElevatedButton(
                      key: const ValueKey('btnGoToRegister'),
                      onPressed: () {
                        Navigator.pushNamed(context, '/registerScreen');
                      },
                      child: const Text('Register'),
                    ),
                  ),
...
